* lisp/register.el (increment-register): Route it to `append-to-register', if register contains text so that `C-x r +' can now be used for appending to a text register. (register): New group. (register-separator): New user option. (append-to-register, prepend-to-register): Add separator based on `register-separator. * doc/emacs/regs.texi (Text Registers): `C-x r +' can now be used instead of M-x append-to-register.  New option `register-separator'. (Number Registers): Mention that `C-x r +' is polymorphic.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -182,6 +182,13 @@ just removing them, as done by `yank-excluded-properties'.
 delete-trailing-whitespace command should delete trailing lines at the
 end of the buffer.  It defaults to t.
 
++++
+** `C-x r +' is now overloaded to invoke `append-to-register.
++++
+** New option `separator-register'.  Separator register stores
+separator text for use with M-x append-to-register and M-x
+prepend-to-register.  See manual for details.
+
 ** Search changes
 
 *** Global `M-s _' starts a symbol (identifier) incremental search,
