--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,9 @@
+2012-09-08  Jambunathan K  <kjambunathan@gmail.com>
+
+	* regs.texi (Text Registers): `C-x r +' can now be used instead of
+	M-x append-to-register.  New option `register-separator'.
+	(Number Registers): Mention that `C-x r +' is polymorphic.
+
 2012-09-07  Chong Yidong  <cyd@gnu.org>
 
 	* windows.texi (Window Choice): Don't mention obsolete
@@ -10,9 +16,9 @@
 
 2012-08-24  Michael Albinus  <michael.albinus@gmx.de>
 
-	* cmdargs.texi (General Variables): Setting
-	$DBUS_SESSION_BUS_ADDRESS to a dummy value suppresses connections
-	to the D-Bus session bus.  (Bug#12112)
+	* cmdargs.texi (General Variables):
+	Setting $DBUS_SESSION_BUS_ADDRESS to a dummy value suppresses
+	connections to the D-Bus session bus.  (Bug#12112)
 
 2012-08-14  Eli Zaretskii  <eliz@gnu.org>
 
