--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,10 @@
+2012-09-08  Dmitry Gutov  <dgutov@yandex.ru>
+
+	* automated/ruby-mode-tests.el:
+	(ruby-toggle-block-to-multiline): New test.
+	(ruby-should-indent-buffer, ruby-toggle-block-to-do-end)
+	(ruby-toggle-block-to-brace): Use buffer-string.
+
 2012-09-07  Dmitry Gutov  <dgutov@yandex.ru>
 
 	* automated/ruby-mode-tests.el: New tests (Bug#11613).
