--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-09  Chong Yidong  <cyd@gnu.org>
+
+	* files.el (hack-local-variables-confirm): Use quit-window to kill
+	the *Local Variables* buffer.
+
 2012-09-08  Dmitry Gutov  <dgutov@yandex.ru>
 
 	* progmodes/ruby-mode.el (ruby-toggle-block): Guess the current block,
