--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,11 @@
+2012-09-09  Chong Yidong  <cyd@gnu.org>
+
+	* minibuf.texi (Yes-or-No Queries): Document recentering and
+	scrolling in y-or-n-p.  Remove gratuitous example.
+
+	* searching.texi (Search and Replace): Document window scrolling
+	entries in query-replace-map.
+
 2012-09-08  Chong Yidong  <cyd@gnu.org>
 
 	* syntax.texi (Syntax Table Internals): Define "raw syntax
