--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-09-09  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* register.el (register-separator): Rename from
+	separator-register.  All uses changed.  Doc fix.
+	(register): Fix version.
+
 2012-09-09  Chong Yidong  <cyd@gnu.org>
 
 	* replace.el (query-replace-map): Bind four new symbols for
