--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,9 +1,13 @@
+2012-09-09  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* eshell/em-unix.el (eshell/sudo): Explicitly drop return value.
+
 2012-09-09  Alan Mackenzie  <acm@muc.de>
 
-	* progmodes/cc-engine.el (c-state-cache-init): Initialise
-	c-state-semi-nonlit-pos-cache\(-limit\)? properly.
-	(c-record-parse-state-state): record
-	c-state-semi-nonlit-pos-cache\(-limit\)?.
+	* progmodes/cc-engine.el (c-state-cache-init):
+	Initialise c-state-semi-nonlit-pos-cache\(-limit\)? properly.
+	(c-record-parse-state-state):
+	Record c-state-semi-nonlit-pos-cache\(-limit\)?.
 
 2012-09-09  Andreas Schwab  <schwab@linux-m68k.org>
 
