--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,17 @@
+2012-09-09  Juri Linkov  <juri@jurta.org>
+
+	* replace.el (replace-regexp-lax-whitespace): New defcustom.
+	(replace-lax-whitespace, query-replace-regexp)
+	(query-replace-regexp-eval, replace-regexp): Doc fix.
+	(perform-replace, replace-highlight): Let-bind
+	isearch-lax-whitespace to replace-lax-whitespace and
+	isearch-regexp-lax-whitespace to replace-regexp-lax-whitespace.
+
+	* isearch.el (isearch-query-replace): Let-bind
+	replace-lax-whitespace to isearch-lax-whitespace and
+	replace-regexp-lax-whitespace to
+	isearch-regexp-lax-whitespace.  (Bug#10885)
+
 2012-09-09  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* eshell/em-unix.el (eshell/sudo): Explicitly drop return value.
