--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-10  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* lisp.h (XSETINT, XSETCONS, XSETVECTOR, XSETSTRING, XSETSYMBOL)
+	(XSETFLOAT, XSETMISC): Parenthesize macro bodies.
+
 2012-09-09  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* lisp.h (make_lisp_ptr): New macro to replace XSET.
