--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-10  Chong Yidong  <cyd@gnu.org>
+
+	* fns.c (Fdelq, Fdelete): Doc fix.
+
 2012-09-10  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* lisp.h (XSETINT, XSETCONS, XSETVECTOR, XSETSTRING, XSETSYMBOL)
