--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-11  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Simplify, document, and port floating-point (Bug#12381).
+	* CPP-DEFINES (HAVE_CBRT, HAVE_LOGB, logb): Remove.
+
 2012-09-09  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Assume C89 or later for math functions (Bug#12381).
