--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-11  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Simplify, document, and port floating-point (Bug#12381).
+	* NEWS: Document NaNs versus signaling-error change.
+
 2012-09-04  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Give more-useful info on a fatal error (Bug#12328).
