* subr.el (set-temporary-overlay-map): Add a docstring.  (bug#12346)
Bug #12346 is not closed as this commit does not document
`set-temporary-overlay-map' in the manual.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,10 @@
 2012-09-11  Bastien Guerry  <bzg@gnu.org>
 
+	* subr.el (set-temporary-overlay-map): Add a docstring.
+	(bug#12346)
+
+2012-09-11  Bastien Guerry  <bzg@gnu.org>
+
 	* minibuffer.el (completion-table-subvert): Fix docstring.
 	(bug#12347)
 
