Prefer assignment to memcpy when either will do.
* lib-src/pop.c (socket_connection) [HAVE_GETADDRINFO]:
* src/bidi.c (bidi_push_it, bidi_pop_it):
* src/fns.c (copy_hash_table):
* src/image.c (define_image_type):
* src/keyboard.c (kbd_buffer_store_event_hold):
* src/process.c (Fprocess_send_eof):
* src/xfaces.c (x_create_gc) [HAVE_NS]:
* src/xgselect.c (xg_select):
Use assignment, not memcpy, as either will do here, and assignment is
more likely to catch type errors.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,14 @@
 2012-09-11  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* bidi.c (bidi_push_it, bidi_pop_it):
+	* fns.c (copy_hash_table):
+	* image.c (define_image_type):
+	* keyboard.c (kbd_buffer_store_event_hold):
+	* process.c (Fprocess_send_eof):
+	* xfaces.c (x_create_gc) [HAVE_NS]:
+	* xgselect.c (xg_select):
+	Prefer assignment to memcpy when either will do.
+
 	* alloc.c (discard_killed_buffers): Tune and simplify a bit.
 	Use pointer-to-a-pointer to simplify and avoid a NILP check each
 	time an item is removed.  No need to mark this function 'inline';
