--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-12  Glenn Morris  <rgm@gnu.org>
+
+	* debugging.texi (Using Debugger): Fix typo.
+
 2012-08-24  Chong Yidong  <cyd@gnu.org>
 
 	* Version 24.2 released.
