* idlw-shell.el (idlwave-shell-complete-filename): Fix 2011-05-17 change.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-12  Jose Marino  <marinoj@nso.edu>  (tiny change)
+
+	* progmodes/idlw-shell.el (idlwave-shell-complete-filename):
+	Fix 2011-05-17 change.  (Bug#12418)
+
 2012-09-11  Leo Liu  <sdl.web@gmail.com>
 
 	* subr.el (ignore-errors): Mention with-demoted-errors in doc-string.
