Fix bug #12403 with garbled display under non-zero scroll-margin.
 src/xdisp.c (try_window_reusing_current_matrix): Under bidi
 reordering, locate the cursor by calling set_cursor_from_row; if
 that fails, clear the desired glyph matrix before returning a
 failure indication to the caller.  Fixes leaving garbled display
 when fast scrolling with a down-key when scroll-margin is non-zero.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2012-09-12  Eli Zaretskii  <eliz@gnu.org>
+
+	* xdisp.c (try_window_reusing_current_matrix): Under bidi
+	reordering, locate the cursor by calling set_cursor_from_row; if
+	that fails, clear the desired glyph matrix before returning a
+	failure indication to the caller.  Fixes leaving garbled display
+	when fast scrolling with a down-key.  (Bug#12403)
+
 2012-09-12  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* gtkutil.c (x_wm_set_size_hint): Use 1 col for base_width so it
